--- a/Tp2/arte.html
+++ b/Tp2/arte.html
@@ -4,15 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Radiohead — Arte</title>
+  <title>Radiohead —Artes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-dark text-light">
 
 <!-- Contenedor principal -->
-<div class="container border  rounded p-4 mt-5 bg-dark align-items-center">
+<div class="container border rounded p-4 mt-5 bg-dark align-items-center">
 
-  <h1 class="nav justify-content-center flex-wrap">Conceptos artísticos y colaboradores para la banda</h1>
+  <!-- Título destacado -->
+  <h1 class="text-center fw-bold display-3 text-warning shadow mb-4">
+    Conceptos artísticos y colaboradores para la banda
+  </h1>
+
   <!-- Menú horizontal -->
   <nav class="mb-4">
     <ul class="nav justify-content-center flex-wrap">
@@ -21,10 +25,9 @@
   </nav>
 
   <!-- Introducción -->
-  <section class="mb-4 ">
+  <section class="mb-4">
     <p>Desde sus primeros años, Radiohead entendió que la música no se escucha solo con los oídos: se experimenta con todos los sentidos...</p>
   </section>
-
   <!-- Carrusel de imágenes -->
   <div id="carruselArte" class="carousel slide mb-5" data-bs-ride="carousel">
     <div class="carousel-inner">
