--- a/Tp2/videos.html
+++ b/Tp2/videos.html
@@ -11,7 +11,7 @@
 <!-- Título -->
 <header class="container text-center py-4">
   <h1 class="text-danger">Qué nos dice Radiohead a través de sus videos</h1>
-  <p class="text-light" >A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
+  <p class="text-light">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
   No solo sus miembros protagonizan estas producciones, sino que cada video suele presentar una puesta en escena y un concepto propio. 
   Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad.</p>
 </header>
@@ -27,7 +27,7 @@
     <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="premios.html">Premios y reconocimientos</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="integrantes.html">La banda y sus miembros</a></li>
-     <li class="nav-item"><a class="nav-link text-white" href="formulario.html">Formulario</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="formulario.html">Formulario</a></li>
   </ul>
 </nav>
 
@@ -37,7 +37,14 @@
   <!-- Bloque 1 -->
   <section class="row mb-5 align-items-start">
     <div class="col-md-6">
-      <iframe class="w-100" height="315" src="https://www.youtube.com/embed/TNRCvG9YtYI?si=MfO4tVNndPIEA_f0" title="Weird Fishes" frameborder="0" allowfullscreen></iframe>
+      <!-- Screenshot como miniatura -->
+      <img src="imagenes/weirdfirst.png" class="w-100 mb-3" height="315" alt="Miniatura Weird Fishes"
+           data-bs-toggle="collapse" data-bs-target="#video1">
+      <!-- Video oculto -->
+      <div class="collapse" id="video1">
+        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/TNRCvG9YtYI?si=MfO4tVNndPIEA_f0" 
+                title="Weird Fishes" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Weird Fishes - by Tobias Stretch</h2>
@@ -50,7 +57,12 @@
   <!-- Bloque 2 -->
   <section class="row mb-5 align-items-start">
     <div class="col-md-6">
-      <iframe class="w-100" height="315" src="https://www.youtube.com/embed/yI2oS2hoL0k?si=1H4lKiJu8VP7ZeBj" title="Burn The Witch" frameborder="0" allowfullscreen></iframe>
+      <img src="imagenes/burnthewitch.png" class="w-100 mb-3" height="315" alt="Miniatura Burn The Witch"
+           data-bs-toggle="collapse" data-bs-target="#video2">
+      <div class="collapse" id="video2">
+        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/yI2oS2hoL0k?si=1H4lKiJu8VP7ZeBj" 
+                title="Burn The Witch" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Burn The Witch</h2>
@@ -63,7 +75,12 @@
   <!-- Bloque 3 -->
   <section class="row mb-5 align-items-start">
     <div class="col-md-6">
-      <iframe class="w-100" height="315" src="https://www.youtube.com/embed/fHiGbolFFGw?si=NIveZXY3rFD4LBlg&amp;start=61" title="Paranoid Android" frameborder="0" allowfullscreen></iframe>
+      <img src="imagenes/paranoidandroid.png" class="w-100 mb-3" height="315" alt="Miniatura Paranoid Android"
+           data-bs-toggle="collapse" data-bs-target="#video3">
+      <div class="collapse" id="video3">
+        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/fHiGbolFFGw?si=NIveZXY3rFD4LBlg&amp;start=61" 
+                title="Paranoid Android" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Paranoid Android</h2>
@@ -76,7 +93,12 @@
   <!-- Bloque 4 -->
   <section class="row mb-5 align-items-start">
     <div class="col-md-6">
-      <iframe class="w-100" height="315" src="https://www.youtube.com/embed/8nTFjVm9sTQ?si=PjXSGsgy1ABUv8zc" title="House of Cards" frameborder="0" allowfullscreen></iframe>
+      <img src="imagenes/houseofcards.png" class="w-100 mb-3" height="315" alt="Miniatura House of Cards"
+           data-bs-toggle="collapse" data-bs-target="#video4">
+      <div class="collapse" id="video4">
+        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/8nTFjVm9sTQ?si=PjXSGsgy1ABUv8zc" 
+                title="House of Cards" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - House of Cards</h2>
@@ -88,10 +110,12 @@
 
 </main>
 
-  <!-- Footer -->
-  <footer class="text-center mt-5 text-secondary">
-    <p>Comenta que te parecio esta interfaz!       <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li> </p>
-  </footer>
+<!-- Footer -->
+<footer class="text-center mt-5 text-secondary">
+  <p>Comenta qué te pareció esta interfaz! 
+    <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
+  </p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
