arreglo de problemas de videos

--- a/Tp2/videos.html
+++ b/Tp2/videos.html
@@ -38,7 +38,7 @@
   <section class="row mb-5 align-items-start">
     <div class="col-md-6">
       <!-- Screenshot como miniatura -->
-      <img src="imagenes/weirdfirst.png" class="w-100 mb-3" height="315" alt="Miniatura Weird Fishes"
+      <img src="Tp2/imagenes/weirdfirst.png" class="w-100 mb-3" height="315" alt="Miniatura Weird Fishes"
            data-bs-toggle="collapse" data-bs-target="#video1">
       <!-- Video oculto -->
       <div class="collapse" id="video1">
