cambie las rutas de los videos

--- a/Tp2/videos.html
+++ b/Tp2/videos.html
@@ -36,16 +36,15 @@
 
   <!-- Bloque 1 -->
   <section class="row mb-5 align-items-start">
-    <div class="col-md-6">
-      <!-- Screenshot como miniatura -->
-      <img src="Tp2/imagenes/weirdfirst.png" class="w-100 mb-3" height="315" alt="Miniatura Weird Fishes"
-           data-bs-toggle="collapse" data-bs-target="#video1">
-      <!-- Video oculto -->
-      <div class="collapse" id="video1">
-        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/TNRCvG9YtYI?si=MfO4tVNndPIEA_f0" 
-                title="Weird Fishes" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+  <div class="col-md-6">
+    <!-- Miniatura clickeable que lleva al video -->
+    <a href="https://www.youtube.com/watch?v=TNRCvG9YtYI" target="_blank">
+      <img src="imagenes/weirdfirst.png" 
+           class="w-100 mb-3" height="315" 
+           alt="Miniatura Weird Fishes"
+           style="cursor:pointer;">
+    </a>
+  </div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Weird Fishes - by Tobias Stretch</h2>
       <p>Este videoclip, dirigido por Tobias Stretch, utiliza animación en stop-motion con figuras y paisajes artesanales que crean un mundo extraño y surrealista.  
@@ -56,14 +55,15 @@
 
   <!-- Bloque 2 -->
   <section class="row mb-5 align-items-start">
-    <div class="col-md-6">
-      <img src="imagenes/burnthewitch.png" class="w-100 mb-3" height="315" alt="Miniatura Burn The Witch"
-           data-bs-toggle="collapse" data-bs-target="#video2">
-      <div class="collapse" id="video2">
-        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/yI2oS2hoL0k?si=1H4lKiJu8VP7ZeBj" 
-                title="Burn The Witch" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+  <div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=yI2oS2hoL0k" target="_blank">
+    <img src="imagenes/burnthewitch.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura Burn The Witch"
+         style="cursor:pointer;">
+  </a>
+</div>
+
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Burn The Witch</h2>
       <p>El vídeo, dirigido por Chris Hopewell, emplea animación stop‑motion con un estilo que evoca el programa infantil británico “Trumpton” y la película de culto The Wicker Man.  
@@ -74,14 +74,14 @@
 
   <!-- Bloque 3 -->
   <section class="row mb-5 align-items-start">
-    <div class="col-md-6">
-      <img src="imagenes/paranoidandroid.png" class="w-100 mb-3" height="315" alt="Miniatura Paranoid Android"
-           data-bs-toggle="collapse" data-bs-target="#video3">
-      <div class="collapse" id="video3">
-        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/fHiGbolFFGw?si=NIveZXY3rFD4LBlg&amp;start=61" 
-                title="Paranoid Android" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=fHiGbolFFGw&t=61s" target="_blank">
+    <img src="imagenes/paranoidandroid.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura Paranoid Android"
+         style="cursor:pointer;">
+  </a>
+</div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Paranoid Android</h2>
       <p>El videoclip, dirigido por Magnus Carlsson, utiliza animación en estilo caricaturesco y surrealista para contar una historia que mezcla humor negro y crítica social.  
@@ -92,14 +92,14 @@
 
   <!-- Bloque 4 -->
   <section class="row mb-5 align-items-start">
-    <div class="col-md-6">
-      <img src="imagenes/houseofcards.png" class="w-100 mb-3" height="315" alt="Miniatura House of Cards"
-           data-bs-toggle="collapse" data-bs-target="#video4">
-      <div class="collapse" id="video4">
-        <iframe class="w-100" height="315" src="https://www.youtube.com/embed/8nTFjVm9sTQ?si=PjXSGsgy1ABUv8zc" 
-                title="House of Cards" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=8nTFjVm9sTQ" target="_blank">
+    <img src="imagenes/houseofcards.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura House of Cards"
+         style="cursor:pointer;">
+  </a>
+</div>
     <div class="col-md-6">
       <h2 class="text-danger">Radiohead - House of Cards</h2>
       <p>El videoclip, dirigido por James Frost, se realizó utilizando tecnología LIDAR para capturar formas y profundidades sin cámaras tradicionales.  
