--- a/Tp2/conciertos.html
+++ b/Tp2/conciertos.html
@@ -1,56 +1,113 @@
 <!doctype html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Radiohead — Conciertos </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Radiohead — Conciertos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<header>
-<div>
-<h1>Experiencia en vivo de Radiohead</h1>
-<p>Los mejores conciertos en la historia de su carrera</p>
-</div>
-<nav>
-<ul>
-<li><a href="videos.html">Videos</a></li>
-<li><a href="premios.html">Premios y reconocimientos</a>/li>
+<body class="bg-dark text-light">
 
-</ul>
-</nav>
+<!-- Título -->
+<header class="container text-center py-4">
+  <h1 class="text-danger">Los mejores shows en vivo de la banda</h1>
+  <p class="text-light">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
+  No solo sus miembros protagonizan estas producciones, sino que cada video suele presentar una puesta en escena y un concepto propio. 
+  Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad.</p>
 </header>
 
+<!-- Menú -->
+<nav class="container mb-4">
+  <ul class="nav justify-content-center bg-secondary rounded py-2">
+    <li class="nav-item"><a class="nav-link text-white" href="index.html">Inicio</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="premios.html">Premios y reconocimientos</a></li>
 
-<main>
-<section class="container my-5">
-  <h2 class="text-center mb-4">Galería de Videos</h2>
-  <div class="row" id="galeria-videos"></div>
-</section>
+  </ul>
+</nav>
 
-<!-- Modal para reproducir video -->
-<div class="modal fade" id="videoModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content bg-dark">
-      <div class="modal-body p-0">
-        <div class="ratio ratio-16x9">
-          <iframe id="videoFrame" src="" title="Video" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
+<!-- Contenido principal -->
+<main class="container">
+
+  <!-- Bloque 1 -->
+  <section class="row mb-5 align-items-start">
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=ATvonKDt6jQ" target="_blank">
+    <img src="imagenes/glastonbury.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura del video"
+         style="cursor:pointer;">
+  </a>
 </div>
+      <h2 class="text-danger">Radiohead - Glastonbury 1997</h2>
+      <p>Considerado por la revista Q como el mejor concierto de la historia, fue una actuación icónica que congregó a 40,000 espectadores.</p>
+    </div>
+  </section>
+
+  <!-- Bloque 2 -->
+  <section class="row mb-5 align-items-start">
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=1hgXZAHonLs&t=3s" target="_blank">
+    <img src="imagenes/bonnaroo.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura del video"
+         style="cursor:pointer;">
+  </a>
+</div>
+
+    <div class="col-md-6">
+      <h2 class="text-orange">Radiohead - Live at Bonnaroo (June 2006) </h2>
+      <p> Durante este festival, la banda ofreció su setlist más largo en Estados Unidos, 
+        con 28 canciones, incluyendo una anticipación de temas del álbum In Rainbows.</p>
+    </div>
+  </section>
+
+  <!-- Bloque 3 -->
+  <section class="row mb-5 align-items-start">
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=P20r9blqt2I&t=1s" target="_blank">
+    <img src="imagenes/pinkpop.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura del video"
+         style="cursor:pointer;">
+  </a>
+</div>
+    <div class="col-md-6">
+      <h2 class="text-warning">Radiohead - pinkpop 2001</h2>
+      <p>El videoclip, dirigido por Magnus Carlsson, utiliza animación en estilo caricaturesco y surrealista para contar una historia que mezcla humor negro y crítica social.  
+      Muestra personajes extraños en situaciones absurdas y grotescas, reflejando temas de alienación, locura y violencia que están presentes en la letra de la canción.  
+      La animación acompaña perfectamente la intensidad y los cambios de ritmo de la música, creando un mundo inquietante y memorable.</p>
+    </div>
+  </section>
+
+  <!-- Bloque 4 -->
+  <section class="row mb-5 align-items-start">
+<div class="col-md-6">
+  <a href="https://www.youtube.com/watch?v=r_hegdP5ICM" target="_blank">
+    <img src="imagenes/westpalmbeach.png" 
+         class="w-100 mb-3" height="315" 
+         alt="Miniatura del video"
+         style="cursor:pointer;">
+  </a>
+</div>
+
+
+    <div class="col-md-6">
+      <h2 class="text-tint color($pink-500)">Radiohead - West Palm Beach 2008</h2>
+      <p>El videoclip, dirigido por James Frost, se realizó utilizando tecnología LIDAR para capturar formas y profundidades sin cámaras tradicionales.  
+      Esto genera un efecto visual futurista y etéreo, donde los rostros y objetos aparecen como siluetas geométricas flotantes.  
+      La estética minimalista y abstracta refleja la intimidad y vulnerabilidad de la canción, mientras transmite una sensación de distancia y contemplación.</p>
+    </div>
+  </section>
 
 </main>
 
+<!-- Footer -->
+<footer class="text-center mt-5 text-secondary">
+  <p>Comenta qué te pareció esta interfaz! 
+    <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
+  </p>
+</footer>
 
-  <!-- Footer -->
-  <footer class="text-center mt-5 text-secondary">
-    <p>Comenta que te parecio esta interfaz!       <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li> </p>
-  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-
 </body>
 </html>
