--- a/Tp2/conciertos.html
+++ b/Tp2/conciertos.html
@@ -5,25 +5,32 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Radiohead — Conciertos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+ <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body class="bg-dark text-light">
 
-<!-- Título -->
-<header class="container text-center py-4">
-  <h1 class="text-danger">Los mejores shows en vivo de la banda</h1>
-  <p class="text-light">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
+
+  <!-- ENCABEZADO -->
+  <header class="bg-black text-white py-4 mb-4">
+    <div class="container text-center">
+      <h1 class="mb-3">Los mejores shows en vivo de la banda</h1>
+      <p class="lead">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
   No solo sus miembros protagonizan estas producciones, sino que cada video suele presentar una puesta en escena y un concepto propio. 
-  Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad.</p>
-</header>
+  Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad.
+      </p>
+    </div>
+    <nav class="bg-secondary py-2">
+      <div class="container">
+        <ul class="nav justify-content-center">
 
-<!-- Menú -->
-<nav class="container mb-4">
-  <ul class="nav justify-content-center bg-secondary rounded py-2">
-    <li class="nav-item"><a class="nav-link text-white" href="index.html">Inicio</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="premios.html">Premios y reconocimientos</a></li>
-
-  </ul>
-</nav>
+          <li class="nav-item"><a href="arte.html" class="nav-link text-white">Arte</a></li>
+          <li class="nav-item"><a href="videos.html" class="nav-link text-white">Videos</a></li>
+               
+          
+        </ul>
+      </div>
+    </nav>
+  </header>
 
 <!-- Contenido principal -->
 <main class="container">
@@ -38,8 +45,11 @@
          style="cursor:pointer;">
   </a>
 </div>
+    <div class="col-md-6">
       <h2 class="text-danger">Radiohead - Glastonbury 1997</h2>
-      <p>Considerado por la revista Q como el mejor concierto de la historia, fue una actuación icónica que congregó a 40,000 espectadores.</p>
+      <p>Hay quien la señala como la mejor actuación en la historia del festival inglés, lo cual ya es señalar en un encuentro que empezó a celebrarse en 1970 y que ha 
+        tenido como cabezas de cartel a David Bowie, The Cure, Oasis o los Red Hot Chili Peppers. El grupo acababa de lanzar su casi litúrgico OK Computer y estaba listo 
+        para comerse el mundo.</p>
     </div>
   </section>
 
@@ -55,9 +65,11 @@
 </div>
 
     <div class="col-md-6">
-      <h2 class="text-orange">Radiohead - Live at Bonnaroo (June 2006) </h2>
-      <p> Durante este festival, la banda ofreció su setlist más largo en Estados Unidos, 
-        con 28 canciones, incluyendo una anticipación de temas del álbum In Rainbows.</p>
+      <h2 class="text-naranja">Radiohead - Live at Bonnaroo (June 2006) </h2>
+      <p>Es la legendaria actuación de la banda en el festival de música de Bonnaroo en 2006, la cual es considerada una de sus mejores actuaciones en vivo 
+        en Estados Unidos y fue posteriormente publicada como un video completo con audio de la mesa de mezclas por la propia banda. 
+        Este concierto, que incluyó 28 canciones, se destacó por su duración y la reacción del público, incluyendo la interpretación de temas como "Exit Music (For A Film)", 
+        y es considerado un momento icónico para la banda y el festival. </p>
     </div>
   </section>
 
@@ -73,9 +85,8 @@
 </div>
     <div class="col-md-6">
       <h2 class="text-warning">Radiohead - pinkpop 2001</h2>
-      <p>El videoclip, dirigido por Magnus Carlsson, utiliza animación en estilo caricaturesco y surrealista para contar una historia que mezcla humor negro y crítica social.  
-      Muestra personajes extraños en situaciones absurdas y grotescas, reflejando temas de alienación, locura y violencia que están presentes en la letra de la canción.  
-      La animación acompaña perfectamente la intensidad y los cambios de ritmo de la música, creando un mundo inquietante y memorable.</p>
+      <p>El último concierto en festivales europeos de 2001, un set breve (de apenas 90 minutos) como cabeza de cartel
+         en Pinkpop justo después de la actuación de Limp Bizkit (Thom bromea antes de «Paranoid Android»)..</p>
     </div>
   </section>
 
@@ -92,10 +103,9 @@
 
 
     <div class="col-md-6">
-      <h2 class="text-tint color($pink-500)">Radiohead - West Palm Beach 2008</h2>
-      <p>El videoclip, dirigido por James Frost, se realizó utilizando tecnología LIDAR para capturar formas y profundidades sin cámaras tradicionales.  
-      Esto genera un efecto visual futurista y etéreo, donde los rostros y objetos aparecen como siluetas geométricas flotantes.  
-      La estética minimalista y abstracta refleja la intimidad y vulnerabilidad de la canción, mientras transmite una sensación de distancia y contemplación.</p>
+      <h2 class="text-rosa">Radiohead - West Palm Beach 2008</h2>
+      <p>Radiohead actuó en West Palm Beach, Florida, el 5 de mayo de 2008, en el Anfiteatro Cruzan como el primer concierto de su gira mundial de 2008.
+         El grupo tocó un set de 24 canciones que incluía la mayoría de su álbum In Rainbows y apariciones en vivo de canciones como "Optimistic" y "Bullet Proof..I Wish I Was". </p>
     </div>
   </section>
 
