--- a/Tp2/index.html
+++ b/Tp2/index.html
@@ -5,85 +5,40 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Radiohead — Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #121212;
-      color: #f0f0f0;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .layout-container {
-      max-width: 1200px;
-      background-color: #1e1e1e;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.05);
-      padding: 2rem;
-    }
-    .titulo h1 {
-      color: #e50914;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-    .foto-banda {
-      max-width: 100%;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-    }
-    .menu-lateral ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    .menu-lateral li {
-      margin-bottom: 0.5rem;
-    }
-    .menu-lateral a {
-      color: #00ff99;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    .menu-lateral a:hover {
-      text-decoration: underline;
-    }
-    .text-success {
-      color: #00ff99 !important;
-    }
-    p {
-      line-height: 1.6;
-    }
-  </style>
 </head>
-<body>
+<body class="bg-dark text-light">
 
 <!-- Contenedor principal -->
-<div class="layout-container mx-auto mt-5">
+<div class="container bg-secondary bg-opacity-25 rounded shadow-lg p-4 mt-5">
   
   <!-- Título -->
-  <header class="titulo text-center mb-4">
-    <h1>¿QUIÉNES SON RADIOHEAD?</h1>
+  <header class="text-center mb-4">
+    <h1 class="text-danger fw-bold">¿QUIÉNES SON RADIOHEAD?</h1>
     <p><em>La banda atemporal del último siglo</em></p>
   </header>
 
   <!-- Imagen y menú -->
-  <div class="row seccion-superior mb-4">
+  <div class="row mb-4">
     <!-- Imagen -->
-    <div class="col-md-6 d-flex justify-content-center align-items-start">
-      <img src="imagenes/foto banda.jpg" alt="Foto publicitaria de la banda" class="foto-banda">
+    <div class="col-md-6 d-flex justify-content-center">
+      <img src="imagenes/foto banda.jpg" alt="Foto publicitaria de la banda" 
+           class="img-fluid rounded shadow">
     </div>
 
     <!-- Menú -->
-    <div class="col-md-6 menu-lateral">
+    <div class="col-md-6">
       <h5 class="text-success">MENÚ</h5>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="albums.html">Discografía</a></li>
-        <li><a href="conciertos.html">Conciertos</a></li>
-        <li><a href="miembros.html">La banda y sus miembros</a></li>
-
+      <ul class="list-unstyled">
+        <li class="mb-2"><a href="index.html" class="text-success text-decoration-none fw-semibold">Inicio</a></li>
+        <li class="mb-2"><a href="albums.html" class="text-success text-decoration-none fw-semibold">Discografía</a></li>
+        <li class="mb-2"><a href="conciertos.html" class="text-success text-decoration-none fw-semibold">Conciertos</a></li>
+        <li class="mb-2"><a href="integrantes.html" class="text-success text-decoration-none fw-semibold">La banda y sus miembros</a></li>
       </ul>
     </div>
   </div>
 
   <!-- Introducción -->
-  <p class="text-light text-center mb-4">Sigue navegando para conocer más sobre ellos</p>
+  <p class="text-center mb-4">Sigue navegando para conocer más sobre ellos</p>
 
   <!-- Contenido principal -->
   <div class="row">
@@ -104,12 +59,13 @@
     </div>
   </div>
 </div>
-  <!-- Footer -->
-  <footer class="text-center mt-5 text-secondary">
-    <p>Comenta que te parecio esta interfaz!       <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li> </p>
-  </footer>
+
+<!-- Footer -->
+<footer class="text-center mt-5 text-secondary">
+  <p>Comenta qué te pareció esta interfaz!</p>
+  <a class="nav-link text-white" href="contacto.html">Contacto</a>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
