--- a/Tp2/videos.html
+++ b/Tp2/videos.html
@@ -6,117 +6,106 @@
   <title>Radiohead — Videoclips</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-dark text-light">
+<body class="bg-light text-dark">
 
-<!-- Título -->
-<header class="container text-center py-4">
-  <h1 class="text-danger">Qué nos dice Radiohead a través de sus videos</h1>
-  <p class="text-light">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
-  No solo sus miembros protagonizan estas producciones, sino que cada video suele presentar una puesta en escena y un concepto propio. 
-  Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad.</p>
-</header>
-
-<!-- Menú -->
-<nav class="container mb-4">
-  <ul class="nav justify-content-center bg-secondary rounded py-2">
-    <li class="nav-item"><a class="nav-link text-white" href="index.html">Inicio</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="albums.html">Discografía</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="videos.html">Videos</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="conciertos.html">Conciertos</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="arte.html">Arte</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="premios.html">Premios y reconocimientos</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="integrantes.html">La banda y sus miembros</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="formulario.html">Formulario</a></li>
-  </ul>
-</nav>
-
-<!-- Contenido principal -->
-<main class="container">
-
-  <!-- Bloque 1 -->
-  <section class="row mb-5 align-items-start">
-  <div class="col-md-6">
-    <!-- Miniatura clickeable que lleva al video -->
-    <a href="https://www.youtube.com/watch?v=TNRCvG9YtYI" target="_blank">
-      <img src="imagenes/weirdfirst.png" 
-           class="w-100 mb-3" height="315" 
-           alt="Miniatura Weird Fishes"
-           style="cursor:pointer;">
-    </a>
-  </div>
-    <div class="col-md-6">
-      <h2 class="text-danger">Radiohead - Weird Fishes - by Tobias Stretch</h2>
-      <p>Este videoclip, dirigido por Tobias Stretch, utiliza animación en stop-motion con figuras y paisajes artesanales que crean un mundo extraño y surrealista.  
-      Las criaturas y escenarios representan visualmente la sensación de sumergirse en lo desconocido, como sugiere la letra de la canción, donde se habla de caer en el fondo del mar y perderse en extraños peces y gusanos.  
-      El vídeo destaca por su originalidad, textura táctil y capacidad de transmitir emociones y alienación sin necesidad de una narrativa lineal, acompañando perfectamente la atmósfera de la canción.</p>
+  <!-- ENCABEZADO -->
+  <header class="bg-dark text-white py-4 mb-4">
+    <div class="container text-center">
+      <h1 class="mb-3">Qué nos dice Radiohead a través de sus videos</h1>
+      <p class="lead">A lo largo de los años, Radiohead ha experimentado con un enfoque performático en sus videoclips. 
+      No solo sus miembros protagonizan estas producciones, sino que cada video suele presentar una puesta en escena y un concepto propio. 
+      Además, la banda ha explorado distintas técnicas de animación colaborando con otros artistas, destacando siempre por su originalidad y creatividad. </p>
     </div>
-  </section>
+    <nav class="bg-secondary py-2">
+      <div class="container">
+        <ul class="nav justify-content-center">
+          <li class="nav-item"><a href="index.html" class="nav-link text-white">Inicio</a></li>
+          <li class="nav-item"><a href="conciertos.html" class="nav-link text-white">Conciertos</a></li>
+          <li class="nav-item"><a href="arte.html" class="nav-link text-white">Arte</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 
-  <!-- Bloque 2 -->
-  <section class="row mb-5 align-items-start">
-  <div class="col-md-6">
-  <a href="https://www.youtube.com/watch?v=yI2oS2hoL0k" target="_blank">
-    <img src="imagenes/burnthewitch.png" 
-         class="w-100 mb-3" height="315" 
-         alt="Miniatura Burn The Witch"
-         style="cursor:pointer;">
-  </a>
-</div>
+  <!-- CONTENIDO PRINCIPAL -->
+  <main class="container mb-5">
 
-    <div class="col-md-6">
-      <h2 class="text-danger">Radiohead - Burn The Witch</h2>
-      <p>El vídeo, dirigido por Chris Hopewell, emplea animación stop‑motion con un estilo que evoca el programa infantil británico “Trumpton” y la película de culto The Wicker Man.  
-      Lo que parece un pueblo idílico pronto revela una violencia ritual: un inspector es invitado a subir a una gran estructura de mimbre y ésta termina ardiendo, señalando así la crítica de la banda al delirio colectivo, a la culpa social y al señalamiento al «otro».  
-      El contraste entre la estética amable y la brutalidad implícita refuerza el mensaje de alarma frente al pensamiento de masas y la criminalización de inocentes.</p>
-    </div>
-  </section>
+    <!-- Bloque 1 -->
+    <section class="card shadow-sm mb-5">
+      <div class="row g-0 align-items-start">
+        <div class="col-md-6">
+          <a href="https://www.youtube.com/watch?v=TNRCvG9YtYI" target="_blank">
+            <img src="imagenes/weirdfirst.png" class="w-100 h-100" alt="Miniatura Weird Fishes" style="cursor:pointer;">
+          </a>
+        </div>
+        <div class="col-md-6 p-3">
+          <h2 class="text-danger">Radiohead - Weird Fishes - by Tobias Stretch</h2>
+          <p>Este videoclip, dirigido por Tobias Stretch, utiliza animación en stop-motion con figuras y paisajes artesanales que crean un mundo extraño y surrealista.  
+          Las criaturas y escenarios representan visualmente la sensación de sumergirse en lo desconocido, como sugiere la letra de la canción, donde se habla de caer en el fondo del mar y perderse en extraños peces y gusanos.  
+          El vídeo destaca por su originalidad, textura táctil y capacidad de transmitir emociones y alienación sin necesidad de una narrativa lineal, acompañando perfectamente la atmósfera de la canción.</p>
+        </div>
+      </div>
+    </section>
 
-  <!-- Bloque 3 -->
-  <section class="row mb-5 align-items-start">
-<div class="col-md-6">
-  <a href="https://www.youtube.com/watch?v=fHiGbolFFGw&t=61s" target="_blank">
-    <img src="imagenes/paranoidandroid.png" 
-         class="w-100 mb-3" height="315" 
-         alt="Miniatura Paranoid Android"
-         style="cursor:pointer;">
-  </a>
-</div>
-    <div class="col-md-6">
-      <h2 class="text-danger">Radiohead - Paranoid Android</h2>
-      <p>El videoclip, dirigido por Magnus Carlsson, utiliza animación en estilo caricaturesco y surrealista para contar una historia que mezcla humor negro y crítica social.  
-      Muestra personajes extraños en situaciones absurdas y grotescas, reflejando temas de alienación, locura y violencia que están presentes en la letra de la canción.  
-      La animación acompaña perfectamente la intensidad y los cambios de ritmo de la música, creando un mundo inquietante y memorable.</p>
-    </div>
-  </section>
+    <!-- Bloque 2 -->
+    <section class="card shadow-sm mb-5">
+      <div class="row g-0 align-items-start">
+        <div class="col-md-6">
+          <a href="https://www.youtube.com/watch?v=yI2oS2hoL0k" target="_blank">
+            <img src="imagenes/burnthewitch.png" class="w-100 h-100" alt="Miniatura Burn The Witch" style="cursor:pointer;">
+          </a>
+        </div>
+        <div class="col-md-6 p-3">
+          <h2 class="text-danger">Radiohead - Burn The Witch</h2>
+          <p>El vídeo, dirigido por Chris Hopewell, emplea animación stop‑motion con un estilo que evoca el programa infantil británico “Trumpton” y la película de culto The Wicker Man.  
+          Lo que parece un pueblo idílico pronto revela una violencia ritual: un inspector es invitado a subir a una gran estructura de mimbre y ésta termina ardiendo, señalando así la crítica de la banda al delirio colectivo, a la culpa social y al señalamiento al «otro».  
+          El contraste entre la estética amable y la brutalidad implícita refuerza el mensaje de alarma frente al pensamiento de masas y la criminalización de inocentes.</p>
+        </div>
+      </div>
+    </section>
 
-  <!-- Bloque 4 -->
-  <section class="row mb-5 align-items-start">
-<div class="col-md-6">
-  <a href="https://www.youtube.com/watch?v=8nTFjVm9sTQ" target="_blank">
-    <img src="imagenes/houseofcards.png" 
-         class="w-100 mb-3" height="315" 
-         alt="Miniatura House of Cards"
-         style="cursor:pointer;">
-  </a>
-</div>
-    <div class="col-md-6">
-      <h2 class="text-danger">Radiohead - House of Cards</h2>
-      <p>El videoclip, dirigido por James Frost, se realizó utilizando tecnología LIDAR para capturar formas y profundidades sin cámaras tradicionales.  
-      Esto genera un efecto visual futurista y etéreo, donde los rostros y objetos aparecen como siluetas geométricas flotantes.  
-      La estética minimalista y abstracta refleja la intimidad y vulnerabilidad de la canción, mientras transmite una sensación de distancia y contemplación.</p>
-    </div>
-  </section>
+    <!-- Bloque 3 -->
+    <section class="card shadow-sm mb-5">
+      <div class="row g-0 align-items-start">
+        <div class="col-md-6">
+          <a href="https://www.youtube.com/watch?v=fHiGbolFFGw&t=61s" target="_blank">
+            <img src="imagenes/paranoidandroid.png" class="w-100 h-100" alt="Miniatura Paranoid Android" style="cursor:pointer;">
+          </a>
+        </div>
+        <div class="col-md-6 p-3">
+          <h2 class="text-danger">Radiohead - Paranoid Android</h2>
+          <p>El videoclip, dirigido por Magnus Carlsson, utiliza animación en estilo caricaturesco y surrealista para contar una historia que mezcla humor negro y crítica social.  
+          Muestra personajes extraños en situaciones absurdas y grotescas, reflejando temas de alienación, locura y violencia que están presentes en la letra de la canción.  
+          La animación acompaña perfectamente la intensidad y los cambios de ritmo de la música, creando un mundo inquietante y memorable.</p>
+        </div>
+      </div>
+    </section>
 
-</main>
+    <!-- Bloque 4 -->
+    <section class="card shadow-sm mb-5">
+      <div class="row g-0 align-items-start">
+        <div class="col-md-6">
+          <a href="https://www.youtube.com/watch?v=8nTFjVm9sTQ" target="_blank">
+            <img src="imagenes/houseofcards.png" class="w-100 h-100" alt="Miniatura House of Cards" style="cursor:pointer;">
+          </a>
+        </div>
+        <div class="col-md-6 p-3">
+          <h2 class="text-danger">Radiohead - House of Cards</h2>
+          <p>El videoclip, dirigido por James Frost, se realizó utilizando tecnología LIDAR para capturar formas y profundidades sin cámaras tradicionales.  
+          Esto genera un efecto visual futurista y etéreo, donde los rostros y objetos aparecen como siluetas geométricas flotantes.  
+          La estética minimalista y abstracta refleja la intimidad y vulnerabilidad de la canción, mientras transmite una sensación de distancia y contemplación.</p>
+        </div>
+      </div>
+    </section>
 
-<!-- Footer -->
-<footer class="text-center mt-5 text-secondary">
-  <p>Comenta qué te pareció esta interfaz! 
-    <li class="nav-item"><a class="nav-link text-white" href="contacto.html">Contacto</a></li>
-  </p>
-</footer>
+  </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- FOOTER -->
+  <footer class="text-center mt-5 text-secondary">
+    <p>Comenta qué te pareció esta interfaz!</p>
+    <a class="nav-link text-white" href="contacto.html">Contacto</a>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
