--- a/Tp2/arte.html
+++ b/Tp2/arte.html
@@ -23,41 +23,38 @@
       <li class="nav-item"><a class="nav-link text-white" href="conciertos.html">Conciertos</a></li>
     </ul>
   </nav>
-
-  <!-- Introducción -->
-  <section class="mb-4">
-    <p>Desde sus primeros años, Radiohead entendió que la música no se escucha solo con los oídos: se experimenta con todos los sentidos...</p>
-  </section>
-  <!-- Carrusel de imágenes -->
-  <div id="carruselArte" class="carousel slide mb-5" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="imagenes/radiohead1.jpg" class="d-block w-75 mx-auto" alt="Stanley Donwood">
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/radiohead2.jpg" class="d-block w-75 mx-auto" alt="Dibujo inspirador">
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/radiohead3.jpg" class="d-block w-75 mx-auto" alt="Exposición">
-      </div>
-      <div class="carousel-item">
-        <img src="imagenes/radiohead4.jpg" class="d-block w-75 mx-auto" alt="Libro de arte">
-      </div>
-            <div class="carousel-item">
-        <img src="imagenes/radiohead5.jfif" class="d-block w-75 mx-auto" alt="Libro de arte">
-      </div>
-        </div>
-         <div class="carousel-item">
-        <img src="imagenes/radiohead6.jpg" class="d-block w-75 mx-auto" alt="Libro de arte">
-      </div>
+<!-- Carrusel de imágenes -->
+<div id="carruselArte" class="carousel slide mb-5" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="imagenes/radiohead1.jpg" class="d-block w-75 mx-auto" alt="Stanley Donwood">
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carruselArte" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carruselArte" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
+    <div class="carousel-item">
+      <img src="imagenes/radiohead2.jpg" class="d-block w-75 mx-auto" alt="Dibujo inspirador">
+    </div>
+    <div class="carousel-item">
+      <img src="imagenes/radiohead3.jpg" class="d-block w-75 mx-auto" alt="Exposición">
+    </div>
+    <div class="carousel-item">
+      <img src="imagenes/radiohead4.jpg" class="d-block w-75 mx-auto" alt="Libro de arte">
+    </div>
+    <div class="carousel-item">
+      <img src="imagenes/radiohead5.jfif" class="d-block w-75 mx-auto" alt="Libro de arte">
+    </div>
+    <div class="carousel-item">
+      <img src="imagenes/radiohead6.jpg" class="d-block w-75 mx-auto" alt="Libro de arte">
+    </div>
   </div>
+
+  <!-- Controles -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#carruselArte" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carruselArte" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+  
 <main class="container mt-4">
 
   <!-- Bloque 1: Stanley Donwood -->
