arrefleotras cosas de arte

--- a/Tp2/arte.html
+++ b/Tp2/arte.html
@@ -13,7 +13,7 @@
 <div class="container border rounded p-4 mt-5 bg-dark align-items-center">
 
   <!-- Título destacado -->
-  <h1 class="text-center fw-bold display-3 text-warning shadow mb-4">
+  <h1 class="text-center fw-bold display-3 text-light shadow mb-4">
     Conceptos artísticos y colaboradores para la banda
   </h1>
 
@@ -54,7 +54,7 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
-  
+
 <main class="container mt-4">
 
   <!-- Bloque 1: Stanley Donwood -->
@@ -98,7 +98,7 @@
   </section>
 
   <!-- Bloque 4: Libros de arte -->
-  <section class="mb-4">
+  <section class="row mb-5 align-items-center">
     <div class="col-md-8">
       <h2>Libros de arte</h2>
       <p>Thom y Stanley también han publicado juntos varios libros de arte que contienen piezas únicas, como letras de canciones, poemas, faxes, notas, dibujos y garabatos de distintos álbumes de la banda. 
@@ -106,7 +106,7 @@
         ¡El miedo acecha al territorio!, una obra que ofrece una fascinante inmersión en dos álbumes que ya se consideran clásicos de la música contemporánea, reflejando los miedos, presagios y fantasías 
         que el mundo evocaba con la llegada del nuevo milenio. Este libro se centra en particular en los álbumes *Kid A* y *Amnesiac*.</p>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-4">
       <img src="imagenes/librothom.jfif" alt="Portada del libro" class="img-fluid border">
     </div>
   </section>
